--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,11 @@
-
-
-
+<h1><%= @teamname %></h1>
+<h2>Team Motto: <%= @motto %>!</h2>
+<h2>Hero Name: <%= @h1[0] %></h2>
+<li>Hero Power: <%= @h1[1] %></li>
+<li>Hero Biography: <%= @h1[2] %></li>
+<h2>Hero Name: <%= @h2[0] %></h2>
+<li>Hero Power: <%= @h2[1] %></li>
+<li>Hero Biography: <%= @h2[2] %></li>
+<h2>Hero Name: <%= @h3[0] %></h2>
+<li>Hero Power: <%= @h3[1] %></li>
+<li>Hero Biography: <%= @h3[2] %></li>
